[UPDATE]: Fixing layout shifts in register page

--- a/client/src/Pages/Register/Register.css
+++ b/client/src/Pages/Register/Register.css
@@ -2,18 +2,24 @@
     width: 100%;
     background: #121212;
     padding-top: 150px;
-    
+
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
 
-    position:relative;
+    position: relative;
 }
 
 .register-wrapper .fixed-ui {
-    position:fixed;
+    position: fixed;
     top: 0;
     width: 100vw;
     height: 100vh;
+}
+
+@media only screen and (max-width: 760px) {
+    .register-wrapper {
+        padding-top: 2rem;
+    }
 }
