--- a/client/src/components/EventRegistration/EventRegistration.css
+++ b/client/src/components/EventRegistration/EventRegistration.css
@@ -3,7 +3,7 @@
 } */
 
 .register-container {
-    width: min(100vw, 700px);
+    width: min(95vw, 700px);
     padding: 20px;
     background-color: rgba(255, 255, 255, 0.082);
     border-radius: 8px;
